--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
 :root {
-    --color_class: 46, 46, 62;
+    --color_background: 30, 30, 46;
+    --color_class_1: 46, 46, 62;
+    --color_class_2: 58, 61, 95;
+    --color_text_main: 234, 234, 234;
+    --color_text_addativ: 161, 161, 161;
+
+    --color_button_main: 59, 130, 246;
+    --color_button_hover: 96, 165, 250;
+    --color_button_unactive: 107, 114, 128;
+
+    --color_input_main: 66, 68, 90;
+    --color_input_hover: 90, 96, 117;
+    --color_input_unactive: 107, 114, 128;
+
+    --color_code_error: 248, 113, 113;
+    --color_code_correct: 16, 185, 129;
+    --color_code_varible_type: 96, 165, 250;
+    --color_code_varible_string: 167, 243, 208;
+    --color_code_varible_library: 249, 115, 22;
+    --color_code_varible_key_words: 192, 132, 252;
 }
 
 * {
@@ -9,12 +28,12 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #1E1E2E;
-    color: #EAEAEA;
+    background-color: rgb(var(--color_background));
+    color: rgb(var(--color_text_main));
 }
 
 .classField {
-    background-color: rgba(var(--color_class), 0.7);
+    background-color: rgba(var(--color_class_1), 0.7);
     backdrop-filter: blur(10px);
     border-radius: 30px;
 
@@ -26,7 +45,7 @@ body {
 }
 
 .inputField {
-    background-color: #42445A;
+    background-color: rgb(var(--color_input_main));
     border-radius: 15px;
     border-color: #00000000;
 
@@ -42,14 +61,14 @@ body {
 }
 
 .inputField:focus {
-    background-color: #5A6075;
+    background-color: rgb(var(--color_input_hover));
     outline: none;
 
     transition: background-color 0.4s;
 }
 
 .inputField_disable {
-    background-color: #6B7280;
+    background-color: rgb(var(--color_input_unactive));
     border-radius: 15px;
     border-color: #00000000;
 
@@ -59,7 +78,7 @@ body {
     margin: 3px;
     padding: 3px;
 
-    color: #EAEAEA;
+    color: rgb(var(--color_text_main));
 
     transition: background-color 1s;
 }
@@ -70,9 +89,8 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 0;
 }
 
-
 .button {
-    background-color: #3B82F6;
+    background-color: rgb(var(--color_button_main));
     border-radius: 15px;
     border-color: #00000000;
 
@@ -82,7 +100,7 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 3px;
     padding: 8px;
 
-    color: #EAEAEA;
+    color: rgb(var(--color_text_main));
 
     transform: scale(1, 1);
 
@@ -90,16 +108,14 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .button:hover {
-    background-color: #60A5FA;
+    background-color: rgb(var(--color_button_hover));
     outline: none;
-
-    box-shadow: 0px opx #60A5FA;
 
     transform: scale(1.15, 1.15);
 }
 
 .button_disable {
-    background-color: #6B7280;
+    background-color: rgb(var(--color_button_unactive));
     border-radius: 15px;
     border-color: #00000000;
 
@@ -131,7 +147,9 @@ input[type="number"]::-webkit-inner-spin-button {
 .index_errorBox {
     z-index: 10;
 
-    background-color: rgba(var(--color_class), 1);
+    background-color: rgb(var(--color_class_2));
+
+    color: rgb(var(--color_text_main));
 
     width: 150px;
     height: 100px;
@@ -155,6 +173,8 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 30px;
 
     padding: 0px;
+
+    color: rgb(var(--color_text_main));
 }
 
 
@@ -443,7 +463,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /*
 Темна тема
     Фон: #1E1E2E
-    Фон класів: #2E2E3E
+    Фон класів: #2E2E3E, #3A3D5F
     Основний текст: #EAEAEA
     Додатковий текст: #A1A1A1
     Кнопки:
@@ -464,7 +484,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 Світла тема
     Фон: #F4F4F7
-    Фон класів: #DCE2F0
+    Фон класів: #DCE2F0, #BBCDE5
     Основний текст: #222222
     Додатковий текст: #616161
     Кнопки:
