--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /* ---------- Admin / Player ---------- */
 
 .admin_organizer {
-    height: 100vh;
+    height: calc(100vh - 20px);
     width: calc(100% - 0px);
 
     display: grid;
@@ -229,6 +229,28 @@ input[type="number"]::-webkit-inner-spin-button {
 
     text-align: center;
     align-content: center;
+}
+
+.admin_grid {
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+
+    overflow: auto;
+}
+
+.admin_playerIcon {
+    width: max(100px, 20%);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 10px;
+}
+
+.admin_playerIcon_name {
+    word-break: break-all;
+    text-align: center;
 }
 
 /* ---------- Spectator ---------- */
