--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*#region Universal setting */
+
 :root {
     --color_background: 30, 30, 46;
     --color_class_1: 46, 46, 62;
@@ -36,7 +38,7 @@ body {
 }
 
 canvas {
-    top:0px;
+    top: 0px;
 
     display: block;
     position: absolute;
@@ -205,7 +207,9 @@ input[type="number"]::-webkit-inner-spin-button {
     display: none;
 }
 
-/* ---------- Index ---------- */
+/*#endregion */
+
+/*#region Index */
 
 .index_classField {
     width: max(35vw, 300px);
@@ -218,8 +222,9 @@ input[type="number"]::-webkit-inner-spin-button {
     transform: translateX(calc(50vw - 50% - 15px));
 }
 
+/*#endregion */
 
-/* ---------- Admin ---------- */
+/*#region Admin */
 
 .admin_organizer {
     height: calc(100vh - 20px);
@@ -302,30 +307,91 @@ input[type="number"]::-webkit-inner-spin-button {
 
     width: 24%;
 
-    top:15px;
+    top: 15px;
     left: 15px;
 }
 
-/* ---------- Spectator ---------- */
+/*#endregion */
+
+/*#region Spectator */
+
+.spectator_organizer {
+    height: calc(100vh - 20px);
+    width: calc(100% - 0px);
+
+    display: grid;
+    grid-template-rows: 1fr 7fr;
+    gap: 35px;
+    row-gap: 35px 0px;
+}
 
 .spectator_grid {
     display: grid;
-    grid-template-columns: 150px 150px;
+    grid-template-columns: 1fr 1fr;
     gap: 25px 7px;
-    transform: translateX(25vw);
 }
 
-.spectator_grid_item {
-    width: 150px;
-    height: 90px;
-    background-color: #aaaaaa;
+.spectator_playerIcon {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+
+    width: min(300px, calc(50%-4px));
+
+    margin: 2px;
 }
 
+.spectator_playerIcon_name {
+    word-break: break-all;
+    text-align: center;
+    margin: 0px;
+}
 
-/* ---------- Battle_ChooseTasks ---------- */
+.spectator_playerIcon_info {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    height: min(300px, 50%);
+
+    margin: 10px;
+}
+
+.spectator_progressCircle {
+    width: 150px;
+    height: 150px;
+
+    background: conic-gradient(var(--progress-color) var(--percentage), rgb(var(--color_class_2)) 1%);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: rgb(var(--color_text_main));
+
+    margin: 2px;
+}
+
+.spectator_progressCircle::before {
+    content: '';
+    position: absolute;
+    width: min(70%, calc(70% * (var(--ratio, 1))));
+    aspect-ratio: 1 / 1;
+    background: rgb(var(--color_class_1));
+    border-radius: 50%;
+}
+
+.spectator_progressCircle_text {
+    z-index: 1;
+}
+
+/*#endregion */
+
+/*#region Choose Tasks */
 
 .chooseTasks_cardOfTask {
     background-color: #458c99;
@@ -380,8 +446,9 @@ input[type="number"]::-webkit-inner-spin-button {
     right: 0;
 }
 
+/*#endregion */
 
-/* ---------- Battle_DoTasks ---------- */
+/*#region Programming */
 
 .programming_wrapper {
     background: #fbfbfb;
@@ -501,8 +568,9 @@ input[type="number"]::-webkit-inner-spin-button {
     overflow: auto;
 }
 
+/*#endregion */
 
-/* ---------- Result ---------- */
+/*#region Result */
 
 .result_players {
     grid-column-start: 1;
@@ -531,8 +599,10 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 100px;
 }
 
+/*#endregion */
 
-/*
+
+/* Color palette
 Темна тема
     Фон: #1E1E2E
     Фон класів: #2E2E3E, #3A3D5F
