--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,6 @@ input[type="number"]::-webkit-inner-spin-button {
     padding: 10px;
 }
 
-
 .popUpBoxButton {
     position: absolute;
     top: 1%;
@@ -393,57 +392,78 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /*#region Choose Tasks */
 
+.chooseTasks_organizer {
+    height: calc(100vh - 20px);
+    width: calc(100% - 0px);
+
+    display: grid;
+    grid-template-rows: 1fr 7fr;
+    gap: 35px;
+}
+
+.chooseTasks_profileOrganizer {
+    height: 100%;
+    width: calc(100% - 20px);
+
+    justify-content: center;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 35px;
+}
+
+.chooseTasks_playerCell {
+    position: relative;
+
+    display: table;
+    margin: 0 auto;
+    
+    text-align: center;
+    width: 75%;
+}
+
 .chooseTasks_cardOfTask {
-    background-color: #458c99;
-    width: 100px;
-    height: 150px;
-}
+    width: max(100px, 20%);
 
-.chooseTasks_fullTask {
-    position: absolute;
-
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
-
-    background-color: #9fe8f5;
-    width: 60%;
-    height: 80%;
-}
-
-.chooseTasks_fullTask_p_letter,
-.chooseTasks_fullTask_p_name {
-    margin: 2px 0;
-    padding: 0;
-    line-height: 1.3;
-}
-
-.chooseTasks_fullTask_p_condition {
-    overflow: auto;
-}
-
-.chooseTasks_playerStats,
-.chooseTasks_enemyStats {
-    position: fixed;
-    width: auto;
-    background: #333;
-    color: white;
-    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+
+    margin: 10px;
 }
 
-.chooseTasks_playerStats {
-    bottom: 0;
-    left: 0;
+.chooseTasks_listOfCards {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+
+    overflow: auto;
 }
 
-.chooseTasks_enemyStats {
-    top: 0;
-    right: 0;
+.chooseTasks_fullTask {
+    z-index: 10;
+
+    background-color: rgba(var(--color_class_2), 0.99);
+
+    width: 35vw;
+    height: 50vh;
+
+    position: fixed;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+
+    align-content: center;
+    text-align: center;
+
+    padding: 10px;
+
+    backdrop-filter: blur(0px);
 }
 
 /*#endregion */
