--- a/styles.css
+++ b/styles.css
@@ -520,6 +520,9 @@ input[type="number"]::-webkit-inner-spin-button {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    word-break: break-all;
+    text-align: center;
 }
 
 .programming_timer {
@@ -584,8 +587,8 @@ input[type="number"]::-webkit-inner-spin-button {
     grid-row-end: 5;
 
     padding: 5px;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
+    width: calc(100%-50px);
+    height: 100%;
     line-height: 1;
     overflow-y: auto;
     overflow-wrap: anywhere;
@@ -614,14 +617,10 @@ input[type="number"]::-webkit-inner-spin-button {
 /*#region Result */
 
 .result_players {
-    grid-column-start: 1;
-    grid-column-end: 3;
-
     width: 100%;
     height: 100%;
-    background: #333;
-    color: white;
     display: flex;
+    position: absolute;
 
     align-items: center;
     justify-content: center;
@@ -633,6 +632,9 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .result_playerStats,
 .result_enemyStats {
+    width: 50%;
+    height: 50%;
+
     display: flex;
     flex-direction: row;
     align-items: center;
