--- a/styles.css
+++ b/styles.css
@@ -343,6 +343,15 @@ input[type="number"]::-webkit-inner-spin-button {
     row-gap: 35px 0px;
 }
 
+.spectator_time {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    width: min(300px, calc(50%-4px));
+}
+
 .spectator_grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
